Bug#16557 mysql cmd-line client does not rename .mysql_history.TMP to .mysql_history  - Return error only if 'history' returns -1